[gd_scene load_steps=3 format=3 uid="uid://cu0j1g5xw1jdy"]

[ext_resource type="Script" uid="uid://baq7kq5227cxr" path="res://match_menu.gd" id="1_baoeo"]
[ext_resource type="Texture2D" uid="uid://o15nn3hrtu5c" path="res://assets/logo_MathG_x5vo20.png" id="2_0f3wy"]

[node name="MathMenu" type="Node2D"]
script = ExtResource("1_baoeo")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="join" type="Button" parent="Control"]
layout_mode = 0
offset_left = 295.0
offset_top = 509.0
offset_right = 547.0
offset_bottom = 578.0
text = "Unirse a sala"

[node name="create" type="Button" parent="Control"]
layout_mode = 0
offset_left = 686.0
offset_top = 505.0
offset_right = 943.0
offset_bottom = 580.0
text = "Crear sala"

[node name="back" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1045.0
offset_top = 38.0
offset_right = 1123.0
offset_bottom = 85.0
text = "Volver"

[node name="LogoMathGX5Vo20" type="Sprite2D" parent="Control"]
position = Vector2(576, 268)
scale = Vector2(0.8070501, 0.8464052)
texture = ExtResource("2_0f3wy")

[connection signal="pressed" from="Control/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Control/create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="Control/back" to="." method="_on_back_pressed"]
